@@ -1,6 +1,6 @@
 sdparm (1.05-0.1) unstable; urgency=low
 
-  * xxxxxxxxxxx
+  * additions to SAS-2 Enhanced phy control mode page
 
  -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 15 Oct 2009 14:00:00 -0400
 
